# asc100

./: Cargo.toml  README.md  README_XSTREAM.md  test_roundtrip.rs
.eggs/: egg.1.asc100-v0.2-biz1-certification.txt  egg.1.doc-cleanup-analysis.txt  egg.1.tactical-summary.txt  egg.2.krex-final-cleanup-report.txt  egg.2.use-case-summary.txt
.session/: SESSION_02.md  SESSION_02_ADDENDUM.md  SESSION_03.md
.uat/: FEATHER_CERTIFIED_v0.2.0_BIZ1.md  FEATHER_CERTIFIED_v0.2_LEVEL3.md  FEATHER_CERTIFIED_v1.0_BIZ1.md  FEATHER_USABILITY_01.md  FEATHER_USABILITY_02.md
docs/: ANALYSIS.md  CONCEPTS.md  ROADMAP.md  base100-concept.md
src/: lib.rs  main.rs  metrics.rs  xstream_simple.rs  xstream_transformer.rs
src/char/: charset.rs  extensions.rs  mod.rs  versions.rs
src/rand/: gen.rs  mod.rs  random.rs
src_ref/: asc100-rust-lib.rs  asc100_broken.html  asc100_simple_works.html  js-encoder-repl.tsx
tests/: README.md  debug_binary.rs  debug_bits  debug_bits.rs  debug_test.rs  stress_and_chaos_tests.rs  test_all_markers.rs  test_api_ergonomics.rs  test_invalid_character_strategies.rs  test_performance_metrics.rs  test_strategy_differences.rs  test_xstream_transformer.rs
tests/sh/: test_large.sh  test_performance.sh  test_strategy_system.sh
